tests/ui/explicit-tail-calls/ret-ty-hr-mismatch.stderr
error[E0308]: mismatched types
  --> $DIR/ret-ty-hr-mismatch.rs:5:5
   |
LL |     become bar();
   |     ^^^^^^^^^^^^ one type is more general than the other
   |
   = note: expected fn pointer `for<'a> fn(&'a _)`
              found fn pointer `fn(&'static _)`

error: aborting due to 1 previous error

For more information about this error, try `rustc --explain E0308`.
